--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <link rel="stylesheet" href="styles.css">  
+    <script src="main.js"></script>
     
     <!---------------------------------->
     <!------------- Blue Header -------->
