Add new note button functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
         <a href="" id=menu>&#9776;</a>
         <div id=programname>NoteAssist</div>
-        <a href="" id=newnote>&#9998; New Note</a>
+        <button id=newnote onclick="newNoteAlert()">&#9998; New Note</button>
     </header>
     
     <!---------------------------------->
