--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <!--Turning this into a button break everything and idk why-->
             <button id="copybox" onclick="copyTextFunction()">&#10063; Copy</button> 
-            <textarea id=copiedtext>Important Information is entered here.</textarea>
+            <textarea id=copiedtext></textarea>
             
         </div>
     </div>
