Re-designed majority of code to work with localStorage

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 <!-------------- Floating + Sign ----------->
 <!------------------------------------->
     <div id=addCircle>
-       <a href="" style=color:white;>&#43;</a>
+       <a onclick="addTextBox()" style=color:white;>&#43;</a>
+        <button onclick="addTextBox()">+</button>
+        <p id=resultt>uhm</p>
     </div>
 <script src="main.js"></script>
 </html>
